                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2018-09-23
 * If you wish to take advantage of the new Firebase features in the UI you'll need to load:

 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>

 * Now requires Crypt::JWT and Firebase Perl modules.

2018-07-24
 * Added "unshift_on_create" for wing.object_list in wing.vue.js.

2018-07-22
 * Added a remove() method to wing.object_list in wing.vue.js.

2018-07-16
 * Added bytes filter to wing.vue.js.
 * Added new object handler to wing.object_list in wing.vue.js.

2018-07-14
 * Added wing.scroll_to() in wing.vue.js.
 * Added wing.get_cookie() in wing.vue.js.

2018-07-11
 * wing.vue.js throws errors when apis are empty.
 * Add a very basic Javascript neutralizer to Wing::ContentFilter.

2018-07-06
 * wing.object.save() in wing.vue.js now has a 200ms delay to give vue a chance to update the property.
 * wing.throbber only animates for 200ms instead of 500ms.
 * Added the stash() method to wing.object in wing.vue.js.

2018-07-01
 * Made idea sorting pluggable.
 * Added incomprehensible option to ideas.
 * Added Wing::Algolia.

2018-06-25
 * Gave Session a self relationship.
 * Added an error message if you don't pass in a api url for wing.vue.js delete().
 * Fixed a bug in error handling in wing.vue.js delete.
 * Added wing.base_uri property to wing.vue.js.
 * wing.vue.js now requires <script src="https://cdn.jsdelivr.net/npm/qs@6.5.2/dist/qs.js"></script>.

2018-06-22
 * libpng should be compiled with Wing because the RPMs found in many places don't contain pngfix.

2018-06-20